liblscp - LinuxSampler Control Protocol API
-------------------------------------------

ChangeLog

0.2.8  2005-05-22  More LSCP command syntax changes, particularly on the
                   event subscription ones: the LSCP_EVENT_CHANNELS event
                   definition were renamed to LSCP_EVENT_CHANNEL_COUNT,
                   as to be more meaningful.

0.2.8  2005-05-08  [bug #9] Fixed for a LSCP command syntax convention 
                   consistency, regarding the enumeration of available 
                   sampler engines, Audio and MIDI drivers; this has 
                   affected the signature of the following functions:
                     lscp_get_available_engines();
                     lscp_get_available_audio_drivers();
                     lscp_get_available_midi_drivers();
                   which are now returning an integer count of engines
                   and drivers, respectively, while the following 
                   functions are now being introduced:
                     lscp_list_available_engines();
                     lscp_list_available_audio_drivers();
                     lscp_list_available_midi_drivers();
                   taking on the previous functionality, returning
                   a comma separated list of names.

0.2.7  2005-03-10  Mini bitsy regression; a severe crash (segfault)
                   was fixed on the device configuration functions:
                     lscp_set_audio_device_param();
                     lscp_set_midi_device_param();
                     lscp_set_audio_channel_param();
                     lscp_set_midi_port_param();

0.2.6  2005-03-01  Fixed nasty off-by-one bug on internal helpers.

0.2.5  2005-02-14  Added support for the new INSTRUMENT_NAME field
                   of GET CHANNEL INFO command.

0.2.4  2004-10-11  Fixed lscp_set_channel_midi_channel() again, MIDI
                   channels should be given in the range 0-15, and omni